[package]
name = "reverse-proxy"
version = "0.1.0"
authors = ["Srikanth Bhandary <srikanth.bhandary1@hp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.4"
hyper = "0.12"
futures = "0.1"
tokio = { version = "0.2", features = ["full"] }
regex = "1.5"
jwt-simple = "0.10"
log = { version = "0.4.6", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.6.1"
serde_json = "1.0"



